--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -51,11 +51,9 @@
 
         padding: 0.5rem;
 
-        overflow-y: scroll;
+        overflow-y: auto;
+        @include cursor { scrollbar-width: none; }
 
-        &::-webkit-scrollbar {
-            display: none;
-        }
         touch-action: auto !important;
 
         .boto-seccio {
