--- a/src/app/pages/projects-page/tasker/tasker.component.scss
+++ b/src/app/pages/projects-page/tasker/tasker.component.scss
@@ -64,6 +64,7 @@
 
                 max-height: calc(90% - 1rem);
                 overflow-y: auto;
+                @include cursor { scrollbar-width: none; }
 
                 padding: calc(var(--br) / 2);
                 margin: 0.5rem;
@@ -79,10 +80,6 @@
 
                 // transition: translate 0.3s, margin 0.3s, border-radius 0.3s;
                 transition: all 0.3s;
-
-                &::-webkit-scrollbar {
-                    display: none;
-                }
             }
 
             .media {
